--- a/HTML task/style.css
+++ b/HTML task/style.css
@@ -1,31 +1,65 @@
-#education {
-    text-transform: uppercase;
+body {
+  background-image:url(./Images/notebook.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
+
+td, th, table {
+  border: black 1px solid;
+  }
+
+ .dog {
+  border-radius: 60%;
+  box-sizing: border-box;
+  float:inline-start;
+  padding:25px;
+  margin: 0px;
+}
+
+h3 {
+  text-transform: uppercase;
+}
+
+.border-all{
+border:5px solid black;
+background-color: rgb(255, 228, 196);
+font-style: normal;
+padding: 30px;
+margin:20px;
+}
+
 div .contact {
 font-size: large;
-text-indent: 5%;
+text-indent: 3%;
 }
 
 body, html {
-    height:100%;
-    width: 100%;
+    height:-100%;
+    width: -100%;
     font-family: "Montserrat";
 }
 section {
-    display: flex;
-  }
-  article {
-    padding: 0 2em;
+  display: flex;
+  justify-content:left;
+  align-items:center;
   }
 
-column1 {
-    width:300px;
-    float:right;
+.border-сontacts {
+  float: right;
 }
-column2 {
-    width:200px;
-    float:left;
-    height: 200px;
+
+.border-all-1 {
+    border:5px solid black;
+    background-color: rgb(255, 228, 196);
+    font-style: normal;
+    padding: 30px;
+    margin:20px;
+   }
+
+.dnipro {
+float:right;
+margin:-28px;
+margin-right: 12px;
 }
 
 /* The navigation bar */
@@ -47,6 +81,18 @@ column2 {
     color: #f2f2f2;
     text-align: center;
     padding: 13px 15px;
+    text-decoration: none;
+  }
+
+  a:hover {
+    font-size: 110%;
+    color:red;
+  }
+
+  .dnipro-2:hover {
+    width:300px;
+    height:200px;
+    transition: width 2s, height 2s;
   }
   
   /* Change background on mouse-over */
@@ -60,3 +106,67 @@ column2 {
     margin-top: 20px; /* Add a top margin to avoid content overlay */
     padding: 16px;
   }
+
+  /* Style inputs, select elements and textareas */
+
+input[type=text], select, textarea{
+  width: 100%;
+  padding: 12px;
+  border: 3px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;
+}
+
+/* Style the label to display next to the inputs */
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+/* Style the submit button */
+input[type=submit] {
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+/* Style the container */
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+/* Floating column for labels: 25% width */
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+/* Floating column for inputs: 75% width */
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
