--- a/CSS Task/style.css
+++ b/CSS Task/style.css
@@ -3,42 +3,9 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
 }
-#submit{
-  text-align:center;
-  padding:40px;
-  background-color:lightblue;
-}
-
-#education {
-padding-right: 70px;
-}
-
-#courses {
-  padding-right: 130px;
-}
-
-#languages {
-  padding-right: 130px;
-}
-
-#hard {
-  padding-right: 130px;
-}
-
-#soft {
-  padding-right: 130px;
-}
 
 td, th, table {
   border: black 1px solid;
-  }
-
-.table {
-width:80%;
-padding: 0px 10px;
-display: flex;
-align-items: center;
-justify-content:space-between;
   }
 
  .dog {
@@ -51,16 +18,14 @@ justify-content:space-between;
 
 h3 {
   text-transform: uppercase;
-  text-decoration:underline;
 }
 
 .border-all{
 border:5px solid black;
 background-color: rgb(255, 228, 196);
 font-style: normal;
+padding: 30px;
 margin:20px;
-width:auto;
-padding: 10px 10px;
 }
 
 div .contact {
@@ -72,7 +37,6 @@ body, html {
     height:-100%;
     width: -100%;
     font-family: "Montserrat";
-    line-height:1.5;
 }
 section {
   display: flex;
@@ -82,39 +46,31 @@ section {
 
 .border-сontacts {
 display: flex;
-justify-content:space-around;
+justify-content:space-between;
 align-items:center;
 border:5px solid black;
 background-color: rgb(255, 228, 196);
 font-style: normal;
+padding: 30px;
 margin:20px;
-width:auto;
-padding: 10px 10px;
 }
 
 .border-all-1 {
-border:5px solid black;
-background-color: rgb(255, 228, 196);
-font-style: normal;
-margin:20px;
-padding:5px;
-display: flex;
-justify-content:space-between;
-align-items:center;
-flex-direction: row-reverse;
-}
+    border:5px solid black;
+    background-color: rgb(255, 228, 196);
+    font-style: normal;
+    padding: 30px;
+    margin:20px;
+    display: flex;
+    flex-direction: row-reverse;
+  justify-content:space-between; 
+  align-items: center;  }
 
 .dnipro {
+float:left;
+margin:-28px;
+margin-right: 12px;
 }
- /*
-  display: flex;
-  justify-content:space-between;
-  flex-direction:column-reverse;
-  align-items:flex-end;
-  margin:8px;
-  margin-right: 10px;
-}
-*/
 
 /* The navigation bar */
 .navbar{
@@ -179,26 +135,14 @@ label {
 }
 
 /* Style the submit button */
-.button {
+input[type=submit] {
   background-color: #04AA6D;
   color: white;
-  padding: 10px 20px;
-  margin-top: 10px;
+  padding: 12px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   float: right;
-}
-
-.close-button {
-  background-color: #04AA6D;
-  color: white;
-  padding: 10px 20px;
-  margin-top: 10px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  float:initial;
 }
 
 /* Style the container */
