--- a/HTML task/style.css
+++ b/HTML task/style.css
@@ -3,6 +3,11 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
 }
+
+.smile {
+  position: absolute;
+}
+
 #submit{
   text-align:center;
   padding:40px;
@@ -41,11 +46,11 @@ align-items: center;
 justify-content:space-between;
   }
 
- .dog {
+.dog {
   border-radius: 60%;
   box-sizing: border-box;
   float:inline-start;
-  padding:25px;
+  padding:15px;
   margin: 0px;
 }
 
@@ -60,12 +65,47 @@ background-color: rgb(255, 228, 196);
 font-style: normal;
 margin:20px;
 width:auto;
-padding: 10px 10px;
+padding: 15px;
 }
 
-div .contact {
+div .contact:hover {
+  font-size: 120%;
+  color: red;
+}
+
+.contact
+{
+  transition: width 2s, height 4s;
+}
+
+div .contact-2:link, div .contact-2:visited {
+  background-color: white;
+  color: black;
+  border: 3px solid #333;
+  padding: 3px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 5px;
+}
+
+div .contact-2 {
 font-size: large;
-text-indent: 3%;
+}
+
+div .contact-2:hover,  div .contact-2:active {
+background-color: palevioletred;
+color: white;
+}
+
+.ukraine {
+font-size: large;
+text-shadow: #333;
+font-style:oblique;
+font-weight:600;
+position: absolute;
+left:300px;
+margin-left:25px;
 }
 
 body, html {
@@ -82,14 +122,14 @@ section {
 
 .border-сontacts {
 display: flex;
-justify-content:space-around;
+justify-content:space-between;
 align-items:center;
 border:5px solid black;
 background-color: rgb(255, 228, 196);
 font-style: normal;
 margin:20px;
 width:auto;
-padding: 10px 10px;
+padding: 15px;
 }
 
 .border-all-1 {
@@ -97,7 +137,7 @@ border:5px solid black;
 background-color: rgb(255, 228, 196);
 font-style: normal;
 margin:20px;
-padding:5px;
+padding:15px;
 display: flex;
 justify-content:space-between;
 align-items:center;
@@ -105,16 +145,10 @@ flex-direction: row-reverse;
 }
 
 .dnipro {
+  margin:0px;
+  padding: 5px;
+  display: inline-block;
 }
- /*
-  display: flex;
-  justify-content:space-between;
-  flex-direction:column-reverse;
-  align-items:flex-end;
-  margin:8px;
-  margin-right: 10px;
-}
-*/
 
 /* The navigation bar */
 .navbar{
@@ -124,31 +158,40 @@ flex-direction: row-reverse;
     top: 0;/* Position the navbar at the top of the page */
     width: 100%; /* Full width */
     margin-left:-8px;
-    padding:0;
+    padding-right:150px;
+    padding-left:200px;
+    padding-bottom:0%;
     display:block;
+
   }
   
   /* Links inside the navbar */
   .navbar a {
-    float: left;
+    float:left;
     display: block;
     color: #f2f2f2;
     text-align: center;
-    padding: 13px 15px;
+    padding: 10px 15px;
     text-decoration: none;
   }
 
-  a:hover {
+a:hover {
     font-size: 110%;
     color:red;
   }
 
+.main-page:hover {
+  font-weight: bolder;
+  font-style: italic;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+}
+
   .dnipro-2:hover {
     width:300px;
     height:200px;
-    transition: width 2s, height 2s;
+    transition: height 2s, width 5s;
   }
-  
+
   /* Change background on mouse-over */
   .navbar a:hover {
     background: #ddd;
@@ -157,8 +200,8 @@ flex-direction: row-reverse;
   
   /* Main content */
   .main {
-    margin-top: 20px; /* Add a top margin to avoid content overlay */
-    padding: 16px;
+    margin-top: 25px; /* Add a top margin to avoid content overlay */
+    padding: 20px;
   }
 
   /* Style inputs, select elements and textareas */
@@ -188,6 +231,12 @@ label {
   border-radius: 4px;
   cursor: pointer;
   float: right;
+}
+
+.button:hover {
+  font-size: 120%;
+  background-color: red;
+  opacity: 0.7;
 }
 
 .close-button {
