--- a/HTML task/style.css
+++ b/HTML task/style.css
@@ -250,6 +250,12 @@ label {
   float:initial;
 }
 
+.close-button:hover {
+  font-size: 120%;
+  background-color: red;
+  opacity: 0.7;
+}
+
 /* Style the container */
 .container {
   border-radius: 5px;
