--- a/HTML task/style.css
+++ b/HTML task/style.css
@@ -1,7 +1,7 @@
 body {
   background-image:url(./Images/notebook.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-size:cover;
+  background-repeat:round;
 }
 
 .smile {
@@ -109,8 +109,6 @@ margin-left:25px;
 }
 
 body, html {
-    height:-100%;
-    width: -100%;
     font-family: "Montserrat";
     line-height:1.5;
 }
